# itkwasmvtk

./: .babelrc  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.debug  README.md  itkConfig.js  package-lock.json  package.json  webpack.config.js
data/: sphere_20.vtp
data/UndefAndPartial/: grid_bin.case  grid_bin.density  grid_bin.geo  grid_bin.mass  grid_bin.pres  grid_bin.temp  readme.txt
pipelines/convertEnsightToPolyData/: CMakeLists.txt  main.cxx
pipelines/convertToPolyData/: CMakeLists.txt  main.cxx
pipelines/convertUGToPolyData/: CMakeLists.txt  main.cxx
src/: index.js  index.ts  pipeline.js  pipeline.ts
src/wasm-gen/: PipelineEmscriptenModule.ts  PipelineInput.ts  PipelineOutput.ts  loadEmscriptenModuleMainThread.ts  runPipeline.ts  runPipelineEmscripten.ts
